# tab5_eezstudio_template

./: CMakeLists.txt  README.md  sdkconfig
eez-framework/: CMakeLists.txt
eez-framework/src/eez/core/: assets.h
main/: CMakeLists.txt  gui.c  gui.h  hal.h  m5stack-tab5-lvgl.c
main/Project/: Project.eez-project  Project.eez-project-ui-state
main/ui/: images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_miku1.c
